--- a/project.html
+++ b/project.html
@@ -90,6 +90,7 @@ header{
             
             <img src="./photo/webasdf.jpg" alt="Image 1">
             <img src="./photo/njk.jpg" alt="Image 2">
+            <img src="./photo/image.jpg" alt="Image 2">
         </div>
     </div>
     
