--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         
         <h2>Hi, I'm ABINASH</h2>
         <h3>Emerging IoT Developer</h3>
-        <p>Pre-Final Year<br/> B.E Electronics and Communication Engineering |IOT| at <br/>
-            R.M.K Engineering College<br>Intersted in Open Cv and webdevelopnment</p>
+        <p>Final Year<br/> B.E Electronics and Communication Engineering |IOT| at <br/>
+            R.M.K Engineering College<br>Intersted in Open Cv and web Developnment</p>
        
     </div>
     <!-- name bar -->
