--- a/project.html
+++ b/project.html
@@ -87,10 +87,10 @@ header{
     <h2>Computer Vision Project Output</h2>
     <div class="image-container">
         <div class="image">
-            
-            <img src="./photo/webasdf.jpg" alt="Image 1">
-            <img src="./photo/njk.jpg" alt="Image 2">
-            <img src="./photo/image.jpg" alt="Image 2">
+            <img src="./photo/animal detection.png" alt="Image 1">
+            <img src="./photo/webasdf.jpg" alt="Image 2">
+            <img src="./photo/njk.jpg" alt="Image 3">
+            <img src="./photo/image.jpg" alt="Image 4">
         </div>
     </div>
     
