--- a/project.html
+++ b/project.html
@@ -1,104 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        h1 {
-            text-align: center;
-            font-family: Garamond, serif;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    h1 {
+      text-align: center;
+      font-family: Garamond, serif;
+    }
 
-        h2 {
-            text-align: center;
-        }
+    h2 {
+      text-align: center;
+    }
 
-        .navi a {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
+    .navi a {
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
 
-        .navi {
-            text-align: right;
-            margin-top: 20px;
-            margin-right: 25%;
-            display: flex;
-            justify-content: flex-end;
-            gap: 3px;
-        }
+    .navi {
+      text-align: right;
+      margin-top: 20px;
+      margin-right: 25%;
+      display: flex;
+      justify-content: flex-end;
+      gap: 3px;
+    }
 
-        .navi a:hover {
-            background-color: #0056b3;
-        }
+    .navi a:hover {
+      background-color: #0056b3;
+    }
 
-        header {
-            background-color: gray;
-        }
+    header {
+      background-color: gray;
+    }
 
-        .image-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
+    .image-container {
+      width: 100%;
+      margin-top: 20px;
+    }
 
-        .image {
-            display: flex;
-            gap: 20px;
-        }
+    .image {
+      display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+      width: 100%;
+    }
 
-        .image-box {
-            text-align: center;
-        }
+    .image-box {
+      text-align: center;
+    }
 
-        .image-box img {
-            height: 250px;
-            width: 250px;
-            display: block;
-            margin: 0 auto;
-        }
+    .image-box img {
+      height: 250px;
+      width: 250px;
+    }
 
-        .caption {
-            margin-top: 8px;
-            font-family: Arial, sans-serif;
-            font-size: 14px;
-        }
-    </style>
+    .caption {
+      margin-top: 8px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="navi">
-            <a href="./index.html">HOME</a>
-            <a href="./contact.html">CONTACT</a>
-            <a href="">PROJECT</a>
-        </div> 
-    </header>
+  <header>
+    <div class="navi">
+      <a href="./index.html">HOME</a>
+      <a href="./contact.html">CONTACT</a>
+      <a href="">PROJECT</a>
+    </div> 
+  </header>
 
-    <h1>PROJECT</h1>
-    <h2>Computer Vision Project Output</h2>
+  <h1>PROJECT</h1>
+  <h2>Computer Vision Project Output</h2>
 
-    <div class="image-container">
-        <div class="image">
-            <div class="image-box">
-                <img src="./photo/animal detection.png" alt="Image 1">
-                <p class="caption">Animal Detection</p>
-            </div>
-            <div class="image-box">
-                <img src="./photo/webasdf.jpg" alt="Image 2">
-                <p class="caption">Web Output</p>
-            </div>
-            <div class="image-box">
-                <img src="./photo/njk.jpg" alt="Image 3">
-                <p class="caption">Object Classification</p>
-            </div>
-            <div class="image-box">
-                <img src="./photo/image.jpg" alt="Image 4">
-                <p class="caption">Real-Time Output</p>
-            </div>
-        </div>
+  <div class="image-container">
+    <div class="image">
+      <div class="image-box">
+        <img src="./photo/animal detection.png" alt="Image 1">
+        <p class="caption">Animal Detection</p>
+      </div>
+      <div class="image-box">
+        <img src="./photo/webasdf.jpg" alt="Image 2">
+        <p class="caption">Web Output</p>
+      </div>
+      <div class="image-box">
+        <img src="./photo/njk.jpg" alt="Image 3">
+        <p class="caption">Object Classification</p>
+      </div>
+      <div class="image-box">
+        <img src="./photo/image.jpg" alt="Image 4">
+        <p class="caption">Real-Time Output</p>
+      </div>
     </div>
+  </div>
 </body>
 </html>
